<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="strathmore.com.bbitproject.register"
    tools:showIn="@layout/activity_register">

    <android.support.design.widget.TextInputEditText
        style="@style/PurpleThemeInput"
        android:id="@+id/fname_reg"
        android:hint="@string/txtFname_hint"
        android:inputType="text"/>
    <android.support.design.widget.TextInputEditText
        style="@style/PurpleThemeInput"
        android:id="@+id/sname_reg"
        android:hint="@string/txtSname_hint"
        android:inputType="text"/>

    <android.support.design.widget.TextInputEditText
        style="@style/PurpleThemeInput"
        android:id="@+id/username_reg"
        android:hint="@string/txtUsername_hint"/>
    <android.support.design.widget.TextInputEditText
        style="@style/PurpleThemeInput"
        android:id="@+id/email_reg"
        android:hint="@string/txtEmail_hint"
        android:inputType="text"/>
    <android.support.design.widget.TextInputEditText
        style="@style/PurpleThemeInput"
        android:id="@+id/password_reg"
        android:hint="@string/txtPassword_hint"
        android:inputType="textPassword"/>
    <Button
        style="@style/PurpleThemeButton"
        android:id="@+id/btnSubmit_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btnSubmit_hint"

        />

</LinearLayout>
