<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="strathmore.com.bbitproject.Login"
    tools:showIn="@layout/activity_login">

    <android.support.design.widget.TextInputEditText
        style="@style/PurpleThemeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtUsername_hint"/>
    <android.support.design.widget.TextInputEditText
        style="@style/PurpleThemeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtPassword_hint"
        android:inputType="textPassword"/>
    <Button
        style="@style/PurpleThemeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btnSignIn_hint"

        />

</LinearLayout>
